--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a {
 
 .page-header nav li { 
   display: inline-block;
-  margin-left: 50px;
+  margin-left: 45px;
 }  
 
 .page-header nav li:last-child {
@@ -382,25 +382,26 @@ main {
 }
 
 .dishes .navigation {
+  width: 9px;
+  height: 9px;
   opacity: 0;
   position: absolute;
-  top: -94px;
+  top: -96px;
   right: 0;
 }
 
 .dishes .controls {
   position: absolute;
-  top: -97px;
+  top: -102px;
   right: 0;
 }
 
 .dishes .controls label {
   width: 9px;
   height: 9px;
-  border: 1px solid #dedede; 
   display: inline-block;
-  border-radius: 20px;
-  margin-left: 10px;
+  border-radius: 50%;
+  margin-left: 7px;
   text-align: center;
   background-color: #dedede;
   cursor: pointer;
@@ -412,7 +413,6 @@ main {
 #btn3:checked ~ .controls label[for="btn3"],
 #btn4:checked ~ .controls label[for="btn4"] {
   background-color: #9b9b9b;
-  border: 1px solid #9b9b9b;
 }
 
 #btn1:hover ~ .controls label[for="btn1"],
