--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ a {
   line-height: 100px;
 }
 
-.billboard .second span {
+.billboard .second {
   font-size: 16px;
   letter-spacing: 0.04em;
 }
