--- a/css/style.css
+++ b/css/style.css
@@ -44,582 +44,608 @@
 }
 
 body {  
-  font-family: "Aleo", serif;
-  background-color: #ffffff;
+  min-width: 1123px;
   margin: 0;
   padding: 0; 
-  min-width: 1120px;
-}
-
-h2 {
-  width: 100%;
-  color: #3b3b3b;
-  font-size: 20px;
-  font-weight: bold;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  margin: 0;
-  margin-bottom: 76px;
-}
-
-section h2::after {
-  content: "";
-  display: inline-block;
-  min-width: 200px;
-  height: 1px;
-  background-color: #e5e3e3;
-  margin-left: 19px;
-  margin-bottom: 7px;
-}   
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  font-family: "Aleo", serif;
+  background-color: #ffffff;
 }
 
 a {
   text-decoration: none;
 }
 
-.clearfix {
-  clear: both;
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.logo { 
-  width: 150px;  
+.js .hidden {
+  height: 0;
   position: relative;
-  font-family: "WCManoNegraBta", cursive;
-  font-size: 40px; 
+  z-index: -999;
+  font-size: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.subtitle {
   margin: 0;
-  padding: 29px 0;  
-  line-height: 60px;
-  float: left;
+  margin-bottom: 76px;
+  font-size: 20px;
+  letter-spacing: 0.05em;
+  color: #3b3b3b;
+  text-transform: uppercase;
+}
+
+.subtitle::after {
+  content: "";
+  min-width: 200px;
+  height: 1px;
+  margin-left: 19px;
+  margin-bottom: 7px; 
+  display: inline-block;
+  background-color: #e5e3e3;
 }   
-
-.logo span {
-  color: #3a3a3a;  
-  letter-spacing: -0.09em;  
-  padding-right: 20px;
-}
-
-.logo span:last-child {
-  color: #f34949;
-  position: absolute;
-  left: 70px;
-}
-
-.logo:hover span:first-child {
-  text-shadow: 0 1px 1px #3a3a3a;    
-}
-
-.logo:hover span:last-child {
-  text-shadow: 0 1px 1px #f34949;
-}
 
 .page-header {
   background-color: #ffffff;
-  min-height: 110px;  
 }
 
-.page-header .content {
+.page-content {
   width: 1100px;
   margin: 0 auto;	
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.page-header nav ul {    
-  text-align: right;
-  padding-top: 46px; 
-}
-
-.page-header nav li { 
-  display: inline-block;
-  margin-left: 45px;
-}  
-
-.page-header nav li:last-child {
-  margin-right: 0;
-} 
-
-.page-header nav a {
-  color: #3b3b3b; 
-  font-size: 14px;    
-  letter-spacing: 0.07em;
+.page-logo { 
+  position: relative;
+  font-family: "WCManoNegraBta", cursive;
+  font-size: 40px; 
+  line-height: 60px;
 }   
 
-.page-header nav a:hover { 
+.page-logo span {
+  letter-spacing: -0.09em;  
+  color: #3a3a3a;  
+}
+
+.page-logo:hover span:first-child {
+  text-shadow: 0 1px 1px #3a3a3a;    
+}
+
+.page-logo span:first-child {
+  padding-right: 20px;  
+}
+
+.page-logo span:last-child {
+  position: absolute;
+  left: 70px;
+  color: #f34949;
+}
+
+.page-logo:hover span:last-child {
+  text-shadow: 0 1px 1px #f34949;
+}
+
+.site-navigation {    
+  margin: 0;
+  padding: 47px 0; 
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.site-item { 
+  padding-left: 47px; 
+}  
+
+.site-link {
+  display: block;
+  font-size: 14px;    
+  letter-spacing: 0.07em;
+  color: #3b3b3b; 
+}   
+
+.site-link:hover { 
   text-shadow: 0 0 1px #3b3b3b;
 }
 
+.container {   
+  position: relative;
+}
+
 .billboard {
-  height: 570px; 	
+  padding: 225px 0 181px 0;
+  background-color: #3f3f3f;
   background-image: url(../img/bg_logo_black.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   border-bottom: 4px solid #f34949;
-}
-
-.billboard .caption {
-  line-height: 60px;
-  text-align: center;  
-  margin: 0;
+  text-align: center;    
   color: #ffffff; 
-  padding-top: 225px;
 }
 
-.billboard .first {
-  font-size: 100px;
+.billboard-title {
+  margin: 0;
   font-family: "WCManoNegraBta", cursive;
+  font-size: 100px;
+  font-weight: normal;
   letter-spacing: -0.09em;
   line-height: 100px;
 }
 
-.billboard .second {
+.billboard-text {
+  margin: 0;
   font-size: 16px;
   letter-spacing: 0.04em;
+  line-height: 60px;
 }
 
-.billboard .second::after,
-.billboard .second::before {
+.billboard-text::after,
+.billboard-text::before {
   content: "";
-  display: inline-block;
   width: 40px;
   height: 1px;
-  background-color: #ffffff;
-  vertical-align: middle;  
   margin: 0 28px; 
+  display: inline-block;
+  vertical-align: middle;  
+  background-color: #ffffff;
 }
 
-main {   
-  background-color: white;
-  margin: 0 auto;
-  margin-bottom: 200px;
-  padding: 0;
-  width: 1100px;
-  position: relative;
+.menu {
+  margin-bottom: 194px;
 }
 
-.resto-menu #menu {
+.menu-title {
   width: 155px;
   height: 75px; 
-  background-image: url(../img/menu.jpg);
-  background-repeat: no-repeat;
   margin: auto;
   margin-top: -4px;
   margin-bottom: 77px; 
-}
-
-.resto-menu #menu h2 {
-  color: #ffffff;
+  padding-top: 22px;
+  font-size: 20px;
   letter-spacing: 0.05em;  
   text-align: center;
-  text-transform: inherit;
-  padding-top: 22px;
+  color: #ffffff;
+  background-image: url(../img/menu.jpg);
+  background-repeat: no-repeat;
 }
 
-.resto-menu table {
-  width: 100%;
-  border-collapse: collapse;
+.menu-list {
+  width: 1100px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 493px);
+  column-gap: 114px;
+  list-style: none;
 }
 
-.resto-menu table td {
-  vertical-align: top;
-  padding-bottom: 60px;
+.no-js .menu-list {
+  margin-bottom: 0;
 }
 
-.resto-menu table dl { 
-  margin: 0; 
+.menu-item {
+  display: grid;
+  grid-template-areas: "title price"
+  "ingredients price";
   letter-spacing: 0.05em;
+  transition: 0.4s ease-out;
 }
 
-.resto-menu table dt {
-  font-size: 16px;  
-  color: #555555;
-  margin-bottom: 6px; 
-}
-
-.resto-menu table dd {
+.menu-subtitle {
+  width: 423px;
   margin: 0;
+  margin-right: 40px;
+  margin-bottom: 6px; 
+  grid-area: title;
+  font-size: 16px;  
+  font-weight: normal;
+  color: #555555;
+  overflow: hidden;
+}
+
+.menu-subtitle::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  margin-right: -100%;
+  display: inline-block;
+  box-sizing: border-box;
+  vertical-align: middle;
+  background-color: #e3e1e1;
+  border: solid #ffffff;
+	border-width: 0 40px;
+}
+
+.menu-description {
+  margin: 0;
+  margin-bottom: 60px;
+  grid-area: ingredients;
   font-size: 12px;
   font-style: italic; 
   font-weight: 300;
   color: #b7b7b7;  
 }
 
-.resto-menu table .line {
-  width: 100%;
-  min-width: 193px;
-  float: left;  
-  margin-top: 9px;
-  border-top: 1px solid #e3e1e1;
-}
-
-.resto-menu table .separator {
-  min-width: 110px;
-}
-
-.resto-menu table .price {
+.menu-price {
   width: 30px; 
+  grid-area: price;
+  justify-self: end;
   color: #555555; 
-  padding: 0;
-  padding-left: 44px;
-  text-align: center;
-  letter-spacing: 0.05em;
 }
 
-.resto-menu input[type="checkbox"] {
-  opacity: 0;
-  position: absolute;
-  top: 31.5%;
-  left: 50%;
-}
-
-.resto-menu table tr:nth-child(1n+5) {
-  opacity: 0;
-  max-height: 0;
-  font-size: 0;
-  position: absolute;
-  z-index: -999;
-}
-
-.resto-menu input[type="checkbox"]:checked ~ table tr {
-  opacity: 1;
-  max-height: 999em;
-  font-size: inherit;
-  position: inherit;
-  transition: 0.4s ease-in;
-}
-
-.resto-menu input[type="checkbox"] ~ .button .trigger::before {
-  content: 'load more';
-  position: absolute;
-  border-right: 1px solid #b7b7b7; 
-  padding-right: 11px;
-  height: 12px;
-}
-
-.resto-menu input[type="checkbox"]:checked ~ .button .trigger::before {
-  content: 'load less';
-  padding-right: 20px;
-  height: 12px;
-}
-
-.resto-menu input[type="checkbox"] ~ .button .arrow {
-  width: 5px;
-  height: 5px;
-  border: 2px solid #b7b7b7;
-  border-width: 2px 0 0 2px;
-  transform: rotate(-135deg);
-  position: absolute;
-  left: 595px;
-  top: 13px;
-}
-
-.resto-menu input[type="checkbox"]:checked ~ .button .arrow {
-  width: 5px;
-  height: 5px;
-  border: 2px solid #b7b7b7;
-  border-width: 2px 0 0 2px;
-  transform: rotate(46deg);
-  position: absolute;
-  left: 595px;
-  top: 16px;
-}
-
-.resto-menu .button {
-  margin-top: 30px;
-  text-align: center;
+.menu-button {
+  width: 135px;
+  margin: 0 auto;
+  padding: 10px 16px;
+  display: block;
   position: relative;
+  text-align: left;
+  background-color: #ffffff;
+  border: 1px solid #ffffff; 
+  cursor: pointer;
 }
 
-.resto-menu .button .trigger {	
-  display: inline-block;
-  width: 116px;
-  height: 21px; 
-  color: #b7b7b7;
+.no-js .menu-button {
+  display: none;
+}
+
+.menu-button:hover,
+.menu-button:focus {
+  border: 1px solid #d7d5d5;
+  transition: 0.3s ease;
+}
+
+.menu-button-text {
   font-size: 14px;
   letter-spacing: 0.07em;
   line-height: 0.7em; 
-  text-decoration: none;
-  text-align: left;
-  border: 1px solid #d7d5d5; 
-  padding-top: 11px;
-  padding-left: 15px;
-  cursor: pointer;
+  color: #b7b7b7;
 }
 
-.resto-menu .button .trigger:hover, 
-.resto-menu .button .trigger:active {
-  background-color: #f7f7f7;
-  box-shadow: inset 0 0 20px 2px #ffffff;
+.menu-button-text::before {
+  content: "";
+  width: 1px;
+  height: 12px;
+  position: absolute;
+  top: 15px;
+  right: 34px;
+  background-color: #b7b7b7;
+}
+
+.menu-button-text::after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  position: absolute;
+  top: 15px;
+  right: 13px;
+  border: 2px solid #b7b7b7;
+  border-width: 2px 0 0 2px;
+  transform: rotate(-135deg);
+  transition: 0.4s ease-in;
+}
+
+.arrow-up::after {
+  top: 18px;
+  transform: rotate(46deg);
+  transition: 0.4s ease-in;
 }
 
 .dishes {
-  height: 369px;
-  margin: 194px 0;
-}
-
-.dishes .slider {
-  position: relative;  
   width: 1100px;
-  height: 270px;
   margin: 0 auto;
-}
-
-.dishes .inner {
+  margin-bottom: 194px;
   overflow: hidden;
 }
 
-.dishes .slides {
-  width: 999em;
-  transition: transform 0.8s ease;
-}
- 
-.dishes .slide {
-  height: 270px;
-  float: left;
-  margin: 0 auto;
+.no-js .dishes {
+  margin-bottom: 134px;
+  overflow: visible;
 }
 
-.dishes .navigation {
+.dishes-title-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.dishes-controls {
+  position: relative;
+  padding: 0;
+  border: none;
+}
+
+.no-js .dishes-controls {
+  display: none;
+}
+
+.dishes-controls-btn {
   width: 9px;
   height: 9px;
-  opacity: 0;
-  position: absolute;
-  top: -96px;
-  right: 0;
-}
-
-.dishes .controls {
-  position: absolute;
-  top: -102px;
-  right: 0;
-}
-
-.dishes .controls label {
-  width: 9px;
-  height: 9px;
+  margin-left: 7.5px;
   display: inline-block;
-  border-radius: 50%;
-  margin-left: 7px;
-  text-align: center;
   background-color: #dedede;
+  border-radius: 50%;
+}
+
+.dishes-controls-input {
+  width: 9px;
+  height: 9px;
+  margin-top: 6px;
+  margin-left: 7.5px;
+  position: absolute;
+  z-index: 5;
+  opacity: 0;
   cursor: pointer;
-  transition: background-color 0.2s;
 }
 
-#btn1:checked ~ .controls label[for="btn1"],
-#btn2:checked ~ .controls label[for="btn2"],
-#btn3:checked ~ .controls label[for="btn3"],
-#btn4:checked ~ .controls label[for="btn4"] {
+.dishes-controls-input:checked + .dishes-controls-btn,
+.dishes-controls-input:hover + .dishes-controls-btn  {
   background-color: #9b9b9b;
+  transition: background-color 0.3s;
 }
 
-#btn1:hover ~ .controls label[for="btn1"],
-#btn2:hover ~ .controls label[for="btn2"],
-#btn3:hover ~ .controls label[for="btn3"],
-#btn4:hover ~ .controls label[for="btn4"] { 
-  background-color: #9b9b9b;
+.dishes-controls-input:focus + .dishes-controls-btn {
+  outline: 0.2px solid #555555;
 }
 
-#btn1:checked ~ .inner .slides {
-  transform: translate(0);
-  transition: 0.6s ease-out;
+.dishes-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+  transition: transform 0.6s ease-out;
+} 
+
+.no-js .dishes-list {
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-#btn2:checked ~ .inner .slides {
-  transform: translate(-1100px);
-  transition: 0.6s ease-out;
-}
-
-#btn3:checked ~ .inner .slides {
-  transform: translate(-2200px);
-  transition: 0.6s ease-out;
-}
-
-#btn4:checked ~ .inner .slides {
-  transform: translate(-3300px);
-  transition: 0.6s ease-out;
-}
-
-.dishes .dish {
-  float: left;
+.dishes-item {
   margin-right: 60px;
+  display: grid;
+  grid-template-areas: "image image"
+  "title price"
+  "rating rating";
+  font-size: 16px;
+  font-weight: lighter;
+  letter-spacing: 0.05em;
+  line-height: 0.6em; 
+  color: #555555;
 }
 
-.dishes .dish a:hover {
-  opacity: 0.8;
-}
-
-.dishes .four {
+.dishes-item:last-child {
   margin-right: 0;
 }
 
-.dishes .rating {
-  margin-top: 28px;
+.no-js .dishes-item {
+  margin-right: 0;
+  margin-bottom: 60px;
+}
+
+.dishes-link {
   width: 230px;
-  height: 37px;
-  position: relative;
+  height: 200px;
+  margin-bottom: 28px;
+  grid-area: image;
+  background-color: #f0f0f0;
 }
 
-.dishes .rating span {
-  color: #555555;
+.dishes-link:hover, 
+.dishes-link:focus {
+  outline: none;
+  opacity: 0.8;
+  transition: 0.3s ease;
+}
+
+.dishes-subtitle {
+  margin: 0;
+  grid-area: title;
   font-size: 16px;
-  letter-spacing: 0.05em;
   font-weight: lighter;
-  line-height: 0.6em; 
-  float: left;
 }
 
-.dishes .rating .price {
-  float: right;
+.dishes-price {
+  grid-area: price;
+  justify-self: end;
 }
 
-.dishes .reviewStars input[type="radio"] {
-  position: absolute;
-  opacity: 0;
-  top: 26px;
-  left: 0;
+.dishes-rating {
+  width: 80px;
+  margin: 0;
+  margin-top: 14px;
+  margin-left: -1px;
+  padding: 0;
+  grid-area: rating;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  position: relative;
+  border: none;
+}
+
+.dishes-star-input {
   width: 13px;
-  height: 12px;
+  height: 13px;
+  position: absolute;
+  left: 0;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
 }
 
-input[id^="star-2"],
-label[class^="star-2"]::before {
-  left: 16px;
-}
-
-input[id^="star-3"],
-label[class^="star-3"]::before {
-  left: 32px;
-}
-
-input[id^="star-4"],
-label[class^="star-4"]::before {
-  left: 48px;
-}
-
-input[id^="star-5"],
-label[class^="star-5"]::before {
+.dishes-star-input:nth-of-type(1) {
   left: 64px;
 }
 
-.dishes .reviewStars label::before {
-  content: "";
-  display: block;
-  background-image: url(../img/star_dis.png);
-  background-repeat: no-repeat;
-  width: 13px;
-  height: 12px;
-  cursor: pointer;
-  position: absolute;
-  top: 25px;
-  z-index: 5;
+.dishes-star-input:nth-of-type(2) {
+  left: 48px;
 }
 
-.reviewStars input[type="radio"]:checked + label::before,
-.reviewStars input[type="radio"]:hover + label::before,
-.reviewStars input[type="radio"]:checked ~ label::before,
-.reviewStars input[type="radio"]:hover ~ label::before {
-  background-image: url(../img/star.png);
-  background-repeat: no-repeat;
+.dishes-star-input:nth-of-type(3) {
+  left: 32px;
+}
+
+.dishes-star-input:nth-of-type(4) {
+  left: 16px;
+}
+
+.dishes-star-input:nth-of-type(5) {
+  left: 1px;
+}
+
+.dishes-star-input:focus ~ .dishes-star {
+  stroke: #555555;
+  stroke-width: 2px;
+}
+
+.dishes-star-input:checked ~ .dishes-star,
+.dishes-star-input:hover ~ .dishes-star {
+  fill: #f1df1a;
   transition: 0.3s ease-in;
+  transform: scale(-1, 1);
 }
 
-.gallery h2 {
-  font-size: 20px;
+.gallery {
+  width: 1100px;
+  margin: 0 auto;
+  margin-bottom: 200px;
 }
 
-.gallery .images a:hover {
+.gallery-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(366px, 367px));
+  grid-template-rows: repeat(2, 216px);
+}
+
+.gallery-link {
+  width: 367px;
   display: block;
+}
+
+.gallery-link:first-child {
+  width: 366px;
+  grid-row: span 2;
+}
+
+.gallery-link:hover, .gallery-link:focus {
+  outline: none;
   opacity: 0.8;
+  transition: 0.3s ease;
 }
 
-.gallery .images img {
-  margin: 0;
-  padding: 0;
-  float: left;
-}
-
-footer {
-  background-color: #3b3b3b;
+.page-footer {
   padding: 90px 0;
   line-height: 30px;
+  background-color: #3b3b3b;
 }
 
-footer .content {
+.footer-content {
   width: 1100px;
-  padding: 0;
   margin: 0 auto;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-footer .address {
-  color: #ffffff;
-  font-size: 16px;
-  letter-spacing: 0.05em;
+.footer-content p {
+  width: 230px;
 }
 
-footer p {
+.footer-address {
   margin: 0;
   padding: 0;
+  font-size: 16px;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 
-footer .address .street {
+.footer-street {
   font-weight: 300;
   color: #ececec;
 }
 
-footer .address .number {
+.footer-number {
   font-weight: bold;
   color: #ececec;
 }
 
-footer .links li {
+.footer-list {
+  width: 230px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer-item {
   margin-bottom: 5px;
 }
 
-footer .links a {
-  color: #ffffff;
+.footer-link {
   font-size: 16px;
   letter-spacing: 0.05em;  
+  color: #ffffff;
 }
 
-footer .links a:hover {
+.footer-link:hover {
   text-shadow: 0 0 1px #ececec;
 }
 
-footer .logo {
-  display: inline-block;
-  float: none;
-  line-height: 30px;
-  padding: 0;
+.footer-wrapper {
   padding-top: 10px;
 }
 
-footer .logo span:first-child { 
-  color: #ffffff;
-}   
+.footer-logo {
+  position: relative;
+  font-family: "WCManoNegraBta", cursive;
+  font-size: 40px; 
+  line-height: 30px;
+}
 
-footer .logo:hover span:first-child {
+.footer-logo span {
+  letter-spacing: -0.09em;  
+  color: #ffffff;  
+}
+
+.footer-logo:hover span:first-child {
   text-shadow: 0 1px 1px #ffffff;    
 }
 
-footer .copyright .copylink {
-  color: #ececec;
-  font-size: 14px;
-  letter-spacing: 0.05em;
-  font-weight: 300;
+.footer-logo span:first-child {
+  padding-right: 20px;  
+}
+
+.footer-logo span:last-child {
+  position: absolute;
+  left: 70px;
+  color: #f34949;
+}
+
+.footer-logo:hover span:last-child {
+  text-shadow: 0 1px 1px #f34949;
+}
+
+.footer-copyright {
+  margin: 0;
   padding-top: 19px;
-}
-
-footer .copylink a {
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.05em;
   color: #ececec;
-  font-weight: bold;
 }
 
-footer .copylink a:hover {
+.footer-copylink {
+  font-weight: bold;
+  color: #ececec;
+}
+
+.footer-copylink:hover {
   text-shadow: 0 0 1px #ffffff;
 }
