--- a/css/style.css
+++ b/css/style.css
@@ -203,8 +203,8 @@ img {
   width: 155px;
   height: 75px; 
   margin: auto;
-  margin-top: -4px;
-  margin-bottom: 77px; 
+  /* margin-top: -4px; */
+  margin-bottom: 57px; 
   padding-top: 22px;
   font-size: 20px;
   letter-spacing: 0.05em;  
@@ -217,7 +217,7 @@ img {
 .menu-list {
   width: 1100px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(2, 493px);
@@ -264,7 +264,7 @@ img {
 
 .menu-description {
   margin: 0;
-  margin-bottom: 60px;
+  margin-bottom: 57px;
   grid-area: ingredients;
   font-size: 12px;
   font-style: italic; 
@@ -340,7 +340,7 @@ img {
 .dishes {
   width: 1100px;
   margin: 0 auto;
-  margin-bottom: 194px;
+  margin-bottom: 195px;
   overflow: hidden;
 }
 
@@ -432,7 +432,7 @@ img {
 .dishes-link {
   width: 230px;
   height: 200px;
-  margin-bottom: 28px;
+  margin-bottom: 31px;
   grid-area: image;
   background-color: #f0f0f0;
 }
