--- a/css/style.css
+++ b/css/style.css
@@ -519,7 +519,7 @@ img {
 
 .gallery-wrapper {
   display: grid;
-  grid-template-columns: repeat(3, minmax(366px, 367px));
+  grid-template-columns: 366px 367px 367px;
   grid-template-rows: repeat(2, 216px);
 }
 
